// The Firmament project
// Copyright (c) 2011-2012 Malte Schwarzkopf <malte.schwarzkopf@cl.cam.ac.uk>
//
// Task kill message.

package firmament;

message TaskKillMessage {
  enum TaskKillReason {
    USER_ABORT = 0;
    RESOURCE_EXCEEDED = 1;
    PREEMPTION = 2;
  }
  required uint64 task_id = 1;
  optional TaskKillReason reason = 2;
}
